--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/security-bundle": "6.4.*",
         "symfony/translation": "6.4.*",
         "symfony/uid": "6.4.*",
+        "symfony/validator": "6.4.*",
         "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "6.4.*"
     },
