--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,6 @@
 twig:
     file_name_pattern: '*.twig'
+    form_themes: ['tailwind_2_layout.html.twig', '/bundles/form_theme.html.twig']
 
 when@test:
     twig:
